Fix APZ scroll wheel animations often prematurely ending on the first frame. (bug 1157409, r=kats)

--HG--
extra : rebase_source : e66326c8fe42c4c5de3c0f66ca751db0e76c4735