gfx/layers/apz/src/WheelScrollAnimation.cpp
@@ -54,7 +54,12 @@ WheelScrollAnimation::DoSample(FrameMetrics& aFrameMetrics, const TimeDuration& 
   mApzc.mX.AdjustDisplacement(displacement.x, adjustedOffset.x, overscroll.x);
   mApzc.mY.AdjustDisplacement(displacement.y, adjustedOffset.y, overscroll.y,
                               !aFrameMetrics.AllowVerticalScrollWithWheel());
-  if (IsZero(adjustedOffset)) {
+
+  // If we expected to scroll, but there's no more scroll range on either axis,
+  // then end the animation early. Note that the initial displacement could be 0
+  // if the compositor ran very quickly (<1ms) after the animation was created.
+  // When that happens we want to make sure the animation continues.
+  if (!IsZero(displacement) && IsZero(adjustedOffset)) {
     // Nothing more to do - end the animation.
     return false;
   }
@@ -76,9 +81,7 @@ WheelScrollAnimation::InitPreferences(TimeStamp aTime)
   mIntervalRatio = (gfxPrefs::SmoothScrollDurationToIntervalRatio() * 100) / 100.0;
   mIntervalRatio = std::max(1.0, mIntervalRatio);
 
-  if (mIsFirstIteration) {
-    InitializeHistory(aTime);
-  }
+  InitializeHistory(aTime);
 }
 
 } // namespace layers
